Fix layout issue on block plans.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ html{
 
 body{
     font-family: Inter, Arial, Helvetica, sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     line-height: 1.5;
     color: var(--color-body);
 }
@@ -53,10 +53,10 @@ p{
     margin-top: 0;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1024px){
 
     body{
-        font-size: 2.4rem;
+        font-size: 1.8rem;
     }
 
     h1{
@@ -95,7 +95,7 @@ a{
     transition: margin 0.15s;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1024px){
     .link-arrow{
         font-size: 1.5rem;
     }
@@ -125,7 +125,7 @@ a{
     font-size: 1.6rem;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1024px){
 
 .badge{
     font-size: 1.5rem;
@@ -159,7 +159,7 @@ a{
     margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1024px){
     .list--tick .list_item{
         padding-left: 0;
     }
@@ -269,7 +269,7 @@ a{
     color: #fff;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1024px){
     .btn{
         font-size: 1.5rem;
     }
@@ -308,7 +308,7 @@ a{
     margin: 4px;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1024px){
     .input{
         font-size: 1.5rem;
     }
@@ -471,7 +471,7 @@ a{
     bottom: 5px;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1024px){
     .quote{
         font-size: 2rem;
     }
@@ -496,7 +496,7 @@ a{
         grid-template-columns: repeat(2, 1fr);
     }
 }
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1024px){
     .grid--1x3{
         grid-template-columns: repeat(3, 1fr);
     }
@@ -731,6 +731,7 @@ body > .card{
     max-width: 500px;   
 }
 
+
 /* Hero */
 
 /* .hero {
@@ -748,7 +749,7 @@ body > .card{
     width: 100%;
 }
 
-@media (min-width: 768px){
+@media (min-width: 1024px){
 
     .hero__content{
         text-align: left;
